Static code analysis was performed using Sonarqube. The code was refactored according to the analysis.